--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -33,6 +33,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/serialize": "^1.1.1",
     "@emotion/styled": "^11.10.5",
+    "@stlite/kernel": "*",
     "@streamlit/lib": "1.30.0",
     "axios": "^1.6.0",
     "baseui": "12.2.0",
