--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "@loaders.gl/core": "^2.2.8",
     "@loaders.gl/csv": "^2.2.8",
     "@loaders.gl/gltf": "^2.2.8",
+    "@stlite/stlite-kernel": "^0.0.1",
     "apache-arrow": "^7.0.0",
     "axios": "^0.21.4",
     "baseui": "9.106.0",
