Add @stlite/kernel to the frontend to replace ConnectionManager and FileUploadClient for stlite

--- a/frontend/lib/package.json
+++ b/frontend/lib/package.json
@@ -45,6 +45,7 @@
     "@loaders.gl/csv": "^3.2.13",
     "@loaders.gl/gltf": "^3.2.13",
     "apache-arrow": "^16.1.0",
+    "@stlite/kernel": "*",
     "axios": "^1.6.0",
     "baseui": "12.2.0",
     "camelcase": "^7.0.1",
@@ -58,6 +59,7 @@
     "decamelize": "^6.0.0",
     "deck.gl": "^8.9.36",
     "dompurify": "^3.0.9",
+    "form-data-encoder": "^4.0.2",
     "fzy.js": "^0.4.1",
     "hoist-non-react-statics": "^3.3.2",
     "immer": "^9.0.19",
@@ -73,6 +75,7 @@
     "native-file-system-adapter": "^3.0.1",
     "node-emoji": "^1.11.0",
     "numbro": "^2.3.6",
+    "parquet-wasm": "^0.4.0",
     "plotly.js": "^2.30.1",
     "protobufjs": "^7.2.5",
     "query-string": "^8.1.0",
