--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "@luma.gl/gltools": "^8.5.18",
     "@luma.gl/shadertools": "^8.5.18",
     "@luma.gl/webgl": "^8.5.18",
+    "@stlite/kernel": "*",
     "apache-arrow": "^10.0.1",
     "axios": "^0.27.2",
     "baseui": "12.2.0",
