--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -31,6 +31,7 @@
     "@emotion/serialize": "^1.1.1",
     "@emotion/styled": "^11.10.5",
     "@streamlit/lib": "1.39.0",
+    "@stlite/kernel": "*",
     "axios": "^1.7.4",
     "baseui": "12.2.0",
     "classnames": "^2.3.2",
