--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "@bokeh/bokehjs": "^2.4.3",
     "@deck.gl/core": "8.3.14",
     "@deck.gl/json": "^8.2.5",
     "@emotion-icons/emotion-icon": "^4.1.0",
@@ -47,6 +48,7 @@
     "@luma.gl/gltools": "8.3.3",
     "@luma.gl/webgl": "8.3.3",
     "@stlite/kernel": "*",
+    "@testing-library/react": "^11.2.7",
     "apache-arrow": "^8.0.0",
     "axios": "^0.21.4",
     "baseui": "9.116.3",
@@ -60,6 +62,7 @@
     "decamelize": "^4.0.0",
     "deck.gl": "^8.2.5",
     "dompurify": "^2.2.8",
+    "enzyme": "^3.11.0",
     "fzy.js": "^0.4.1",
     "gl-matrix": "^3.2.1",
     "hoist-non-react-statics": "^3.3.2",
@@ -112,9 +115,7 @@
     "vega": "^5.17.3",
     "vega-embed": "^6.10.0",
     "vega-lite": "^5.2.0",
-    "xxhashjs": "^0.2.2",
-    "enzyme": "^3.11.0",
-    "@testing-library/react": "^11.2.7"
+    "xxhashjs": "^0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
