Add modifications for Streamlit 1.27 support (#7)
* Add modifications

* Use replacement kernel manager

* Minor cleanup

* More cleanup

* Use put instead of post

* Remove comments

* Remove commented out code

* Update comment

* Remove commented out code

--- a/frontend/lib/package.json
+++ b/frontend/lib/package.json
@@ -43,6 +43,7 @@
     "@loaders.gl/core": "^3.2.13",
     "@loaders.gl/csv": "^3.2.13",
     "@loaders.gl/gltf": "^3.2.13",
+    "@stlite/kernel": "*",
     "apache-arrow": "^14.0.0",
     "axios": "^1.6.0",
     "baseui": "12.2.0",
@@ -56,6 +57,7 @@
     "date-fns-tz": "^2.0.0",
     "decamelize": "^4.0.0",
     "deck.gl": "^8.8.23",
+    "form-data-encoder": "^4.0.2",
     "fzy.js": "^0.4.1",
     "hoist-non-react-statics": "^3.3.2",
     "immer": "^9.0.19",
