--- a/frontend/lib/package.json
+++ b/frontend/lib/package.json
@@ -43,6 +43,7 @@
     "@loaders.gl/core": "^3.2.13",
     "@loaders.gl/csv": "^3.2.13",
     "@loaders.gl/gltf": "^3.2.13",
+    "@stlite/kernel": "*",
     "apache-arrow": "^15.0.0",
     "axios": "^1.6.0",
     "baseui": "12.2.0",
@@ -57,6 +58,7 @@
     "decamelize": "^6.0.0",
     "deck.gl": "^8.8.23",
     "dompurify": "^3.0.9",
+    "form-data-encoder": "^4.0.2",
     "fzy.js": "^0.4.1",
     "hoist-non-react-statics": "^3.3.2",
     "immer": "^9.0.19",
