--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -32,6 +32,7 @@
     "@emotion/styled": "^11.10.5",
     "@streamlit/lib": "1.37.1",
     "@stlite/kernel": "*",
+    "@stlite/frontend-lib": "*",
     "axios": "^1.6.0",
     "baseui": "12.2.0",
     "classnames": "^2.3.2",
